# Shunting-Yard-Calculator

./: .coveragerc  README.md  pyproject.toml  tasks.py
documentation/: definition.md  implementation.md  instructions.md  testing.md  week1.md  week2.md  week3.md  week4.md  week5.md  week6.md  weeklydocumentation.md
documentation/data/: Screencast from 10-02-23 17:38:26.webm
src/: calculator.py  index.py  variables.py
src/algorithms/: count.py  postfix.py  variables.py
src/errors/: error.py
src/tests/: calculator_test.py  count_test.py  postfix_test.py  variables_test.py
