[tool.poetry]
name = "src"
version = "0.1.0"
description = ""
authors = ["Kalle Hahl <kalle.hahl@hotmail.com>"]
readme = "README.md"
packages = [
    { include = "postfix" },
]

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.1"
coverage = "^7.0.5"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
